--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "hls.js": "1.0.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "video.js": "7.11.8"
   },
   "version": "0.1.0",
   "devDependencies": {
