--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 1
   user: one
-  reference: 
+  reference: 1
   body: MyString
 
 two:
+  id: 2
   user: two
-  reference: 
+  reference: 1
   body: MyString
